GDV_GrammarParser.py
# Generated from GDV_Grammar.g4 by ANTLR 4.11.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class GDV_GrammarParser ( Parser ):

    grammarFileName = "GDV_Grammar.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'or'", "'and'", "'=='", "'!='", "'>'", 
                     "'<'", "'>='", "'<='", "'+'", "'-'", "'*'", "'/'", 
                     "'%'", "'^'", "'not'", "'='", "'('", "')'", "'{'", 
                     "'}'", "'['", "']'", "','", "':'", "';'", "'true'", 
                     "'false'", "'null'", "'if'", "'else'", "'while'", "'for'", 
                     "'function'", "'return'", "'import'", "'from'", "'.'" ]

    symbolicNames = [ "<INVALID>", "OR", "AND", "EQ", "NEQ", "GT", "LT", 
                      "GTEQ", "LTEQ", "PLUS", "MINUS", "MULT", "DIV", "MOD", 
                      "POW", "NOT", "ASSIGN", "OPAR", "CPAR", "OBRACE", 
                      "CBRACE", "OKEY", "CKEY", "COMMA", "POINTS", "SEMICOLON", 
                      "TRUE", "FALSE", "NIL", "IF", "ELSE", "WHILE", "FOR", 
                      "FUNCION", "RETORNO", "IMPORT", "FROM", "POINT", "ID", 
                      "INT", "FLOAT", "STRING", "COMMENT", "SPACE", "NEWLINE", 
                      "OTHER" ]

    RULE_parse = 0
    RULE_from_input = 1
    RULE_from_file = 2
    RULE_stat = 3
    RULE_compound_stat = 4
    RULE_simple_stat = 5
    RULE_assignment = 6
    RULE_if_stat = 7
    RULE_while_stat = 8
    RULE_for_stat = 9
    RULE_funcion = 10
    RULE_importar = 11
    RULE_retornar = 12
    RULE_condition_block = 13
    RULE_stat_block = 14
    RULE_array = 15
    RULE_accessarray = 16
    RULE_variable = 17
    RULE_parametro = 18
    RULE_expr = 19
    RULE_funccall = 20
    RULE_atom = 21
    RULE_objeto = 22
    RULE_keyvalue = 23

    ruleNames =  [ "parse", "from_input", "from_file", "stat", "compound_stat", 
                   "simple_stat", "assignment", "if_stat", "while_stat", 
                   "for_stat", "funcion", "importar", "retornar", "condition_block", 
                   "stat_block", "array", "accessarray", "variable", "parametro", 
                   "expr", "funccall", "atom", "objeto", "keyvalue" ]

    EOF = Token.EOF
    OR=1
    AND=2
    EQ=3
    NEQ=4
    GT=5
    LT=6
    GTEQ=7
    LTEQ=8
    PLUS=9
    MINUS=10
    MULT=11
    DIV=12
    MOD=13
    POW=14
    NOT=15
    ASSIGN=16
    OPAR=17
    CPAR=18
    OBRACE=19
    CBRACE=20
    OKEY=21
    CKEY=22
    COMMA=23
    POINTS=24
    SEMICOLON=25
    TRUE=26
    FALSE=27
    NIL=28
    IF=29
    ELSE=30
    WHILE=31
    FOR=32
    FUNCION=33
    RETORNO=34
    IMPORT=35
    FROM=36
    POINT=37
    ID=38
    INT=39
    FLOAT=40
    STRING=41
    COMMENT=42
    SPACE=43
    NEWLINE=44
    OTHER=45

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.11.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ParseContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def from_input(self):
            return self.getTypedRuleContext(GDV_GrammarParser.From_inputContext,0)


        def from_file(self):
            return self.getTypedRuleContext(GDV_GrammarParser.From_fileContext,0)


        def getRuleIndex(self):
            return GDV_GrammarParser.RULE_parse

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParse" ):
                return visitor.visitParse(self)
            else:
                return visitor.visitChildren(self)




    def parse(self):

        localctx = GDV_GrammarParser.ParseContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_parse)
        try:
            self.state = 50
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,0,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 48
                self.from_input()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 49
                self.from_file()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class From_inputContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def stat(self):
            return self.getTypedRuleContext(GDV_GrammarParser.StatContext,0)


        def getRuleIndex(self):
            return GDV_GrammarParser.RULE_from_input

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFrom_input" ):
                return visitor.visitFrom_input(self)
            else:
                return visitor.visitChildren(self)




    def from_input(self):

        localctx = GDV_GrammarParser.From_inputContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_from_input)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 52
            self.stat()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class From_fileContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(GDV_GrammarParser.EOF, 0)

        def stat(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(GDV_GrammarParser.StatContext)
            else:
                return self.getTypedRuleContext(GDV_GrammarParser.StatContext,i)


        def getRuleIndex(self):
            return GDV_GrammarParser.RULE_from_file

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFrom_file" ):
                return visitor.visitFrom_file(self)
            else:
                return visitor.visitChildren(self)




    def from_file(self):

        localctx = GDV_GrammarParser.From_fileContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_from_file)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 57
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while ((_la) & ~0x3f) == 0 and ((1 << _la) & 39443841582080) != 0:
                self.state = 54
                self.stat()
                self.state = 59
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 60
            self.match(GDV_GrammarParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def simple_stat(self):
            return self.getTypedRuleContext(GDV_GrammarParser.Simple_statContext,0)


        def compound_stat(self):
            return self.getTypedRuleContext(GDV_GrammarParser.Compound_statContext,0)


        def getRuleIndex(self):
            return GDV_GrammarParser.RULE_stat

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStat" ):
                return visitor.visitStat(self)
            else:
                return visitor.visitChildren(self)




    def stat(self):

        localctx = GDV_GrammarParser.StatContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_stat)
        try:
            self.state = 64
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [10, 15, 17, 19, 21, 26, 27, 28, 34, 35, 36, 38, 39, 40, 41, 45]:
                self.enterOuterAlt(localctx, 1)
                self.state = 62
                self.simple_stat()
                pass
            elif token in [29, 31, 32, 33]:
                self.enterOuterAlt(localctx, 2)
                self.state = 63
                self.compound_stat()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Compound_statContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def if_stat(self):
            return self.getTypedRuleContext(GDV_GrammarParser.If_statContext,0)


        def while_stat(self):
            return self.getTypedRuleContext(GDV_GrammarParser.While_statContext,0)


        def for_stat(self):
            return self.getTypedRuleContext(GDV_GrammarParser.For_statContext,0)


        def funcion(self):
            return self.getTypedRuleContext(GDV_GrammarParser.FuncionContext,0)


        def getRuleIndex(self):
            return GDV_GrammarParser.RULE_compound_stat

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCompound_stat" ):
                return visitor.visitCompound_stat(self)
            else:
                return visitor.visitChildren(self)




    def compound_stat(self):

        localctx = GDV_GrammarParser.Compound_statContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_compound_stat)
        try:
            self.state = 70
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [29]:
                self.enterOuterAlt(localctx, 1)
                self.state = 66
                self.if_stat()
                pass
            elif token in [31]:
                self.enterOuterAlt(localctx, 2)
                self.state = 67
                self.while_stat()
                pass
            elif token in [32]:
                self.enterOuterAlt(localctx, 3)
                self.state = 68
                self.for_stat()
                pass
            elif token in [33]:
                self.enterOuterAlt(localctx, 4)
                self.state = 69
                self.funcion()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Simple_statContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def assignment(self):
            return self.getTypedRuleContext(GDV_GrammarParser.AssignmentContext,0)


        def SEMICOLON(self):
            return self.getToken(GDV_GrammarParser.SEMICOLON, 0)

        def importar(self):
            return self.getTypedRuleContext(GDV_GrammarParser.ImportarContext,0)


        def retornar(self):
            return self.getTypedRuleContext(GDV_GrammarParser.RetornarContext,0)


        def atom(self):
            return self.getTypedRuleContext(GDV_GrammarParser.AtomContext,0)


        def expr(self):
            return self.getTypedRuleContext(GDV_GrammarParser.ExprContext,0)


        def OTHER(self):
            return self.getToken(GDV_GrammarParser.OTHER, 0)

        def getRuleIndex(self):
            return GDV_GrammarParser.RULE_simple_stat

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSimple_stat" ):
                return visitor.visitSimple_stat(self)
            else:
                return visitor.visitChildren(self)




    def simple_stat(self):

        localctx = GDV_GrammarParser.Simple_statContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_simple_stat)
        try:
            self.state = 88
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 72
                self.assignment()
                self.state = 73
                self.match(GDV_GrammarParser.SEMICOLON)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 75
                self.importar()
                self.state = 76
                self.match(GDV_GrammarParser.SEMICOLON)
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 78
                self.retornar()
                self.state = 79
                self.match(GDV_GrammarParser.SEMICOLON)
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 81
                self.atom()
                self.state = 82
                self.match(GDV_GrammarParser.SEMICOLON)
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 84
                self.expr(0)
                self.state = 85
                self.match(GDV_GrammarParser.SEMICOLON)
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 87
                self.match(GDV_GrammarParser.OTHER)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AssignmentContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ASSIGN(self):
            return self.getToken(GDV_GrammarParser.ASSIGN, 0)

        def variable(self):
            return self.getTypedRuleContext(GDV_GrammarParser.VariableContext,0)


        def accessarray(self):
            return self.getTypedRuleContext(GDV_GrammarParser.AccessarrayContext,0)


        def expr(self):
            return self.getTypedRuleContext(GDV_GrammarParser.ExprContext,0)


        def getRuleIndex(self):
            return GDV_GrammarParser.RULE_assignment

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAssignment" ):
                return visitor.visitAssignment(self)
            else:
                return visitor.visitChildren(self)




    def assignment(self):

        localctx = GDV_GrammarParser.AssignmentContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_assignment)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 92
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,5,self._ctx)
            if la_ == 1:
                self.state = 90
                self.variable()
                pass

            elif la_ == 2:
                self.state = 91
                self.accessarray()
                pass


            self.state = 94
            self.match(GDV_GrammarParser.ASSIGN)

            self.state = 95
            self.expr(0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class If_statContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IF(self, i:int=None):
            if i is None:
                return self.getTokens(GDV_GrammarParser.IF)
            else:
                return self.getToken(GDV_GrammarParser.IF, i)

        def condition_block(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(GDV_GrammarParser.Condition_blockContext)
            else:
                return self.getTypedRuleContext(GDV_GrammarParser.Condition_blockContext,i)


        def ELSE(self, i:int=None):
            if i is None:
                return self.getTokens(GDV_GrammarParser.ELSE)
            else:
                return self.getToken(GDV_GrammarParser.ELSE, i)

        def stat_block(self):
            return self.getTypedRuleContext(GDV_GrammarParser.Stat_blockContext,0)


        def getRuleIndex(self):
            return GDV_GrammarParser.RULE_if_stat

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIf_stat" ):
                return visitor.visitIf_stat(self)
            else:
                return visitor.visitChildren(self)




    def if_stat(self):

        localctx = GDV_GrammarParser.If_statContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_if_stat)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 97
            self.match(GDV_GrammarParser.IF)
            self.state = 98
            self.condition_block()
            self.state = 104
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,6,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 99
                    self.match(GDV_GrammarParser.ELSE)
                    self.state = 100
                    self.match(GDV_GrammarParser.IF)
                    self.state = 101
                    self.condition_block() 
                self.state = 106
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,6,self._ctx)

            self.state = 109
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==30:
                self.state = 107
                self.match(GDV_GrammarParser.ELSE)
                self.state = 108
                self.stat_block()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class While_statContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def WHILE(self):
            return self.getToken(GDV_GrammarParser.WHILE, 0)

        def expr(self):
            return self.getTypedRuleContext(GDV_GrammarParser.ExprContext,0)


        def stat_block(self):
            return self.getTypedRuleContext(GDV_GrammarParser.Stat_blockContext,0)


        def getRuleIndex(self):
            return GDV_GrammarParser.RULE_while_stat

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitWhile_stat" ):
                return visitor.visitWhile_stat(self)
            else:
                return visitor.visitChildren(self)




    def while_stat(self):

        localctx = GDV_GrammarParser.While_statContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_while_stat)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 111
            self.match(GDV_GrammarParser.WHILE)
            self.state = 112
            self.expr(0)
            self.state = 113
            self.stat_block()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class For_statContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def FOR(self):
            return self.getToken(GDV_GrammarParser.FOR, 0)

        def OPAR(self):
            return self.getToken(GDV_GrammarParser.OPAR, 0)

        def CPAR(self):
            return self.getToken(GDV_GrammarParser.CPAR, 0)

        def stat_block(self):
            return self.getTypedRuleContext(GDV_GrammarParser.Stat_blockContext,0)


        def simple_stat(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(GDV_GrammarParser.Simple_statContext)
            else:
                return self.getTypedRuleContext(GDV_GrammarParser.Simple_statContext,i)


        def expr(self):
            return self.getTypedRuleContext(GDV_GrammarParser.ExprContext,0)


        def assignment(self):
            return self.getTypedRuleContext(GDV_GrammarParser.AssignmentContext,0)


        def retornar(self):
            return self.getTypedRuleContext(GDV_GrammarParser.RetornarContext,0)


        def importar(self):
            return self.getTypedRuleContext(GDV_GrammarParser.ImportarContext,0)


        def atom(self):
            return self.getTypedRuleContext(GDV_GrammarParser.AtomContext,0)


        def OTHER(self):
            return self.getToken(GDV_GrammarParser.OTHER, 0)

        def getRuleIndex(self):
            return GDV_GrammarParser.RULE_for_stat

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFor_stat" ):
                return visitor.visitFor_stat(self)
            else:
                return visitor.visitChildren(self)




    def for_stat(self):

        localctx = GDV_GrammarParser.For_statContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_for_stat)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 115
            self.match(GDV_GrammarParser.FOR)
            self.state = 116
            self.match(GDV_GrammarParser.OPAR)

            self.state = 117
            self.simple_stat()

            self.state = 118
            self.simple_stat()
            self.state = 125
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,8,self._ctx)
            if la_ == 1:
                self.state = 119
                self.expr(0)
                pass

            elif la_ == 2:
                self.state = 120
                self.assignment()
                pass

            elif la_ == 3:
                self.state = 121
                self.retornar()
                pass

            elif la_ == 4:
                self.state = 122
                self.importar()
                pass

            elif la_ == 5:
                self.state = 123
                self.atom()
                pass

            elif la_ == 6:
                self.state = 124
                self.match(GDV_GrammarParser.OTHER)
                pass


            self.state = 127
            self.match(GDV_GrammarParser.CPAR)
            self.state = 128
            self.stat_block()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FuncionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def FUNCION(self):
            return self.getToken(GDV_GrammarParser.FUNCION, 0)

        def ID(self):
            return self.getToken(GDV_GrammarParser.ID, 0)

        def OPAR(self):
            return self.getToken(GDV_GrammarParser.OPAR, 0)

        def CPAR(self):
            return self.getToken(GDV_GrammarParser.CPAR, 0)

        def OBRACE(self):
            return self.getToken(GDV_GrammarParser.OBRACE, 0)

        def CBRACE(self):
            return self.getToken(GDV_GrammarParser.CBRACE, 0)

        def parametro(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(GDV_GrammarParser.ParametroContext)
            else:
                return self.getTypedRuleContext(GDV_GrammarParser.ParametroContext,i)


        def stat(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(GDV_GrammarParser.StatContext)
            else:
                return self.getTypedRuleContext(GDV_GrammarParser.StatContext,i)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(GDV_GrammarParser.COMMA)
            else:
                return self.getToken(GDV_GrammarParser.COMMA, i)

        def getRuleIndex(self):
            return GDV_GrammarParser.RULE_funcion

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFuncion" ):
                return visitor.visitFuncion(self)
            else:
                return visitor.visitChildren(self)




    def funcion(self):

        localctx = GDV_GrammarParser.FuncionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_funcion)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 130
            self.match(GDV_GrammarParser.FUNCION)
            self.state = 131
            self.match(GDV_GrammarParser.ID)
            self.state = 132
            self.match(GDV_GrammarParser.OPAR)
            self.state = 141
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==38:
                self.state = 133
                self.parametro()
                self.state = 138
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==23:
                    self.state = 134
                    self.match(GDV_GrammarParser.COMMA)
                    self.state = 135
                    self.parametro()
                    self.state = 140
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)



            self.state = 143
            self.match(GDV_GrammarParser.CPAR)
            self.state = 144
            self.match(GDV_GrammarParser.OBRACE)
            self.state = 148
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while ((_la) & ~0x3f) == 0 and ((1 << _la) & 39443841582080) != 0:
                self.state = 145
                self.stat()
                self.state = 150
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 151
            self.match(GDV_GrammarParser.CBRACE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ImportarContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IMPORT(self):
            return self.getToken(GDV_GrammarParser.IMPORT, 0)

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(GDV_GrammarParser.ID)
            else:
                return self.getToken(GDV_GrammarParser.ID, i)

        def POINT(self, i:int=None):
            if i is None:
                return self.getTokens(GDV_GrammarParser.POINT)
            else:
                return self.getToken(GDV_GrammarParser.POINT, i)

        def FROM(self):
            return self.getToken(GDV_GrammarParser.FROM, 0)

        def getRuleIndex(self):
            return GDV_GrammarParser.RULE_importar

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitImportar" ):
                return visitor.visitImportar(self)
            else:
                return visitor.visitChildren(self)




    def importar(self):

        localctx = GDV_GrammarParser.ImportarContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_importar)
        self._la = 0 # Token type
        try:
            self.state = 166
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [35]:
                self.enterOuterAlt(localctx, 1)
                self.state = 153
                self.match(GDV_GrammarParser.IMPORT)
                self.state = 154
                self.match(GDV_GrammarParser.ID)
                self.state = 159
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==37:
                    self.state = 155
                    self.match(GDV_GrammarParser.POINT)
                    self.state = 156
                    self.match(GDV_GrammarParser.ID)
                    self.state = 161
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                pass
            elif token in [36]:
                self.enterOuterAlt(localctx, 2)
                self.state = 162
                self.match(GDV_GrammarParser.FROM)
                self.state = 163
                self.match(GDV_GrammarParser.ID)
                self.state = 164
                self.match(GDV_GrammarParser.IMPORT)
                self.state = 165
                self.match(GDV_GrammarParser.ID)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class RetornarContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def RETORNO(self):
            return self.getToken(GDV_GrammarParser.RETORNO, 0)

        def expr(self):
            return self.getTypedRuleContext(GDV_GrammarParser.ExprContext,0)


        def OPAR(self):
            return self.getToken(GDV_GrammarParser.OPAR, 0)

        def CPAR(self):
            return self.getToken(GDV_GrammarParser.CPAR, 0)

        def getRuleIndex(self):
            return GDV_GrammarParser.RULE_retornar

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitRetornar" ):
                return visitor.visitRetornar(self)
            else:
                return visitor.visitChildren(self)




    def retornar(self):

        localctx = GDV_GrammarParser.RetornarContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_retornar)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 168
            self.match(GDV_GrammarParser.RETORNO)
            self.state = 174
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,14,self._ctx)
            if la_ == 1:
                self.state = 169
                self.match(GDV_GrammarParser.OPAR)
                self.state = 170
                self.expr(0)
                self.state = 171
                self.match(GDV_GrammarParser.CPAR)
                pass

            elif la_ == 2:
                self.state = 173
                self.expr(0)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Condition_blockContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expr(self):
            return self.getTypedRuleContext(GDV_GrammarParser.ExprContext,0)


        def stat_block(self):
            return self.getTypedRuleContext(GDV_GrammarParser.Stat_blockContext,0)

